--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 /mvnw text eol=lf
 *.cmd text eol=crlf
+target/* linguist-vendored
+*.html linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
